--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-12 d-flex justify-content-center align-content-center">
+            <p class="test">just a test</p>
+        </div>
+    </div>
+</div>
 
-
-
-<script src="main.js"></script>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
