added lazy loading

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="node_modules/jquery/dist/jquery.slim.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/lazy-loading.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
