--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/css/bundle.css">
+    <link rel="stylesheet" href="../../dist/css/bundle.css">
     <title>Document</title>
 </head>
 <body>
     @@include('includes/header.html')
-    <p>main body</p>
+    <img src="../images/0ykl07yngl631.jpg" alt="">
     @@include('includes/footer.html')
-    <script src="dist/js/bundle.js"></script>
+    <script src="../../dist/js/bundle.js"></script>
 </body>
 </html>
